--- a/Keryhe.Messaging.IO/Keryhe.Messaging.IO.csproj
+++ b/Keryhe.Messaging.IO/Keryhe.Messaging.IO.csproj
@@ -2,27 +2,26 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <Version>0.9.7</Version>
+    <Description>File system based implementation of the Messaging interfaces</Description>
     <Authors>Keith Heard</Authors>
     <Product>Keryhe</Product>
     <Copyright>Copyright 2019</Copyright>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <PackageProjectUrl>https://github.com/keryhe/messaging</PackageProjectUrl>
-    <PackageTags>Keryhe Messaging RabbitMQ</PackageTags>
-    <Description>RabbitMQ implementation of the Messaging interfaces</Description>
+    <PackageTags>Keryhe Messaging IO File</PackageTags>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <AssemblyVersion>0.9.7.0</AssemblyVersion>
+    <Version>0.9.0</Version>
   </PropertyGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\Keryhe.Messaging\Keryhe.Messaging.csproj" />
-  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="2.2.0" />
     <PackageReference Include="Microsoft.Extensions.Logging" Version="2.2.0" />
     <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="2.2.0" />
-    <PackageReference Include="RabbitMQ.Client" Version="5.1.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Keryhe.Messaging\Keryhe.Messaging.csproj" />
   </ItemGroup>
 
 </Project>
