--- a/Keryhe.Messaging.RabbitMQ/Keryhe.Messaging.RabbitMQ.csproj
+++ b/Keryhe.Messaging.RabbitMQ/Keryhe.Messaging.RabbitMQ.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <Version>0.9.7</Version>
+    <Version>0.9.8</Version>
     <Authors>Keith Heard</Authors>
     <Product>Keryhe</Product>
     <Copyright>Copyright 2019</Copyright>
@@ -11,7 +11,7 @@
     <PackageTags>Keryhe Messaging RabbitMQ</PackageTags>
     <Description>RabbitMQ implementation of the Messaging interfaces</Description>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <AssemblyVersion>0.9.7.0</AssemblyVersion>
+    <AssemblyVersion>0.9.8.0</AssemblyVersion>
   </PropertyGroup>
 
   <ItemGroup>
@@ -22,6 +22,7 @@
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="2.2.0" />
     <PackageReference Include="Microsoft.Extensions.Logging" Version="2.2.0" />
     <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="2.2.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.1" />
     <PackageReference Include="RabbitMQ.Client" Version="5.1.0" />
   </ItemGroup>
 
