--- a/Keryhe.Messaging.RabbitMQ/Keryhe.Messaging.RabbitMQ.csproj
+++ b/Keryhe.Messaging.RabbitMQ/Keryhe.Messaging.RabbitMQ.csproj
@@ -5,7 +5,7 @@
     <Version>3.0.1</Version>
     <Authors>Keith Heard</Authors>
     <Product>Keryhe</Product>
-    <Copyright>Copyright 2022</Copyright>
+    <Copyright>Copyright 2025</Copyright>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <PackageProjectUrl>https://github.com/keryhe/messaging</PackageProjectUrl>
     <PackageTags>Keryhe Messaging RabbitMQ</PackageTags>
@@ -13,7 +13,12 @@
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <AssemblyVersion>3.0.1.0</AssemblyVersion>
     <FileVersion>3.0.1.0</FileVersion>
+    <PackageReadmeFile>README.md</PackageReadmeFile>
   </PropertyGroup>
+
+  <ItemGroup>
+    <None Include="README.md" Pack="true" PackagePath="\" />
+  </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Keryhe.Messaging\Keryhe.Messaging.csproj" />
